# CodeVulnerableAnalyzer

./: .gitignore  Dockerfile  MANIFEST.in  README.md  action.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  vulnscan.bat  vulnscan.sh
analyzer/: __init__.py  ai_triage.py  api_extended.py  api_server.py  baseline.py  binary_scan.py  callgraph.py  complexity.py  compliance.py  container_security.py  cpreprocess.py  credential_validators.py  dep_autofix.py  dep_health.py  deps.py  detector.py  diff.py  domain_security.py  duplication.py  engine.py  entropy.py  hash_pinning.py  iac.py  iac_render.py  identity.py  incremental.py  integrations.py  jwt_scan.py  key_material.py  lockfiles.py  lsp.py  manifests_ext.py  mobile_archive.py  models.py  operations.py  performance.py  pii.py  pyast_engine.py  remediation.py  reporter.py  (+16 more)
analyzer/identity_dotnet/: IdentityCollector.cs  VulnScan.Identity.csproj
benchmarks/: README.md  run_precision.py
docs/: ACCESSIBILITY.md  AI_TRIAGE.md  AUTOFIX.md  COVERAGE_LIMITS.md  EDUCATION.md  PERFORMANCE.md  TUTORIAL.md
integrations/: husky-pre-commit  lefthook.yml  pre-commit.yaml
mobile-companion/: README.md
packaging/: pyinstaller.spec
scripts/: ad-audit.ps1  generate_rule_catalog.py  pre-commit
site/: catalog-data.js  catalog.js  style.css
tests/: test_advanced_engine.py  test_core.py  test_expansions_13_16.py  test_expansions_8_12.py  test_platform_expansion.py  test_remaining_features.py  test_remediation_expanded.py  test_secrets_and_supplychain.py  test_security_tools.py  test_ssa.py
(+98 files in other folders)
