[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-vulnerable-analyzer"
version = "2.0.0"
description = "Analisador estático multi-linguagem, IaC, segredos e compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CodeVulnerableAnalyzer"}]
dependencies = ["rich>=13.7.0,<14.0.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]

[project.scripts]
vulnscan = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
